feature: extract DRCService usage out of converters