@@ -4,39 +4,36 @@
  */
 package net.atos.zac.app.inboxdocumenten.converter;
 
-import static nl.info.client.zgw.util.UriUtilsKt.extractUuid;
-
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
+import java.util.stream.IntStream;
 
-import jakarta.inject.Inject;
-
-import net.atos.client.zgw.drc.DrcClientService;
 import net.atos.zac.app.inboxdocumenten.model.RESTInboxDocument;
 import net.atos.zac.documenten.model.InboxDocument;
 
 public class RESTInboxDocumentConverter {
 
-    @Inject
-    private DrcClientService drcClientService;
-
-    public RESTInboxDocument convert(final InboxDocument document) {
+    public RESTInboxDocument convert(final InboxDocument document, final UUID informatieobjectTypeUUID) {
         final RESTInboxDocument restDocument = new RESTInboxDocument();
         restDocument.id = document.getId();
         restDocument.enkelvoudiginformatieobjectUUID = document.getEnkelvoudiginformatieobjectUUID();
         restDocument.enkelvoudiginformatieobjectID = document.getEnkelvoudiginformatieobjectID();
-        restDocument.informatieobjectTypeUUID = extractUuid(
-                drcClientService
-                        .readEnkelvoudigInformatieobject(restDocument.enkelvoudiginformatieobjectUUID)
-                        .getInformatieobjecttype()
-        );
+        restDocument.informatieobjectTypeUUID = informatieobjectTypeUUID;
         restDocument.titel = document.getTitel();
         restDocument.creatiedatum = document.getCreatiedatum().toLocalDate();
         restDocument.bestandsnaam = document.getBestandsnaam();
         return restDocument;
     }
 
-    public List<RESTInboxDocument> convert(final List<InboxDocument> documenten) {
-        return documenten.stream().map(this::convert).collect(Collectors.toList());
+    public List<RESTInboxDocument> convert(
+            final List<InboxDocument> documenten,
+            final List<UUID> informatieobjectTypeUUIDs
+    ) {
+        return IntStream.range(0, documenten.size())
+                .mapToObj(index -> convert(
+                        documenten.get(index),
+                        informatieobjectTypeUUIDs.get(index)
+                ))
+                .toList();
     }
 }
